--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>عالم المرأة</title>
+    <title>أهلا بكم في عالم المرأة</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -14,7 +14,7 @@
         }
         header {
             background-color: #000;
-            color: white;
+            color: yellow;
             padding: 1rem;
             text-align: center;
             font-size: 1.8rem;
