--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
         .buy-button {
             background-color: #28a745;
-            color: white;
+            color: red;
             padding: 10px 20px;
             text-decoration: none;
             font-size: 16px;
@@ -55,7 +55,7 @@
     </style>
 </head>
 <body>
-    <header>عالم المرأة</header>
+    <header>أهلا بكم في عالم المرأة</header>
     <div class="products">
 
     <div class="product">
